# primetime

./: .dockerignore  Dockerfile  INTEGRATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  pyproject.toml
agents/: ETL_INTEGRATION_SUMMARY.md  ID_TRACKING_GUIDE.md  INTEGRATION_GUIDE.md  Prompts.md
agents/etl/: README.md  generate_etl_sql.py  generate_etl_sql_v2.py  mapping_rules.json
agents/etl_agent/: README.md  __init__.py  agent.py
agents/orchestration/: COMPLETE_WORKFLOW_GUIDE.md  INTEGRATION_GUIDE.md  ORCHESTRATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  agent.py  requirements.txt  test_etl_integration.py  test_local.py
agents/schema_mapping/: API_README.md  Dockerfile  README.md  SAMPLE_RESPONSES.md  __init__.py  agent.py  cloudbuild.yaml  requirements.txt  sample_api_response_fix.json  sample_api_response_report.json  schema_mapper.py  worldbank_mapping.json  worldbank_mapping_fix.json  worldbank_mapping_fix_v2.json
agents/staging_loader_agent/: FLEXIBLE_SCHEMA_DETECTION.md  __init__.py  agent.py  requirements.txt  test_schema_parser.py
agents/validation/: CHANGES.md  (+18 more)
backup/: IMPLEMENTATION_SUMMARY.md  main.py
bigquery_adk_agent/: agent.py  requirements.txt  test_local.py
bq_query/: .env  big_query_agent.py  requirements.txt
etl/: README.md  sample_output.txt
etl_agent/: agent.py  requirements.txt
schema_mapping/: README.md  agent.py  deploy_vertex.py
staging_loader_agent/: .env  agent.py  requirements.txt  test_local.py
ui/: Dockerfile  app.py  app_v2.py  requirements.txt
world_hello/: agent.py  requirements.txt  test_local.py
(+99 files in other folders)
