[project]
name = "primetime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.21.0",
    "litellm>=1.80.10",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "google-cloud-bigquery>=3.25.0",
    "thefuzz>=0.22.1",
    "python-Levenshtein>=0.25.0",
    "flask>=2.3.0",
    "gunicorn>=21.0.0",
    "vertexai>=1.43.0",
]
